--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.1",
-    "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "mocha": "^3.0.2",
     "nyc": "^8.1.0",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "wdio-dot-reporter": "0.0.9",
+    "wdio-mocha-framework": "^0.5.11",
+    "wdio-selenium-standalone-service": "0.0.9"
   }
 }
